--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a class="tandylinx-button" href="#nestTop">Lyric Nests</a>
         <a class="tandylinx-button" href="#nestTop"><img src="./assets/images/arrowdown.gif" width="40px"><img src="./assets/images/arrowdown.gif" width="40px"><img src="./assets/images/arrowdown.gif" width="40px"></a>
         <a class="tandylinx-button" href="https://thelentils.bandcamp.com/album/where-ufos-fear-to-tread">Bandcamp</a>
+        <a class="tandylinx-button" href="https://open.spotify.com/album/4G52CmaLvAzoqGrePNI1ol?si=XLfjxzDpROS4YPBnvMcPiA">Spotify</a>
         <a class="tandylinx-button" href="https://music.apple.com/us/album/where-ufos-fear-to-tread/1766721799">Apple Music</a>
         <a class="tandylinx-button" href="https://pcotandy.org">Tandy Website</a>
     </main>
